# protobuf

./: .clang-format  .gitignore  .golangci.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  cgo.go  cgo.h  cgo_test.go  errors.go  go.mod  option.go  pb_include.h  pb_parser.cpp  pb_parser.go  pb_parser.h  pb_parser_test.go  utils.go  utils_test.go  vendor.go
.github/workflows/: go.yml
internal/benchmark/: benchmark_multi_test.go  benchmark_test.go  go.mod  go.sum
internal/cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
internal/example/: main.go
internal/idl/: Makefile  descriptor_set.json  test.proto  test.proto.json
internal/idl/commons/: device.proto  im.proto  user.proto
internal/idl/data/: im.proto
internal/idl/desc/: api.proto
internal/idl/service/: im.proto
internal/pb_gen/: .gitignore  go.mod
internal/test/: api.proto  api.proto.json
